2009-01-22  Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CONFIG_FILES): Add 'lib/test/Makefile'.
	* lib/Makefile.am (SUBDIRS): New variable.
	* lib/dpkg-test.h: New file.
	* lib/test/Makefile.am: Likewise.
	* lib/test/t-macros.c: Likewise.
	* lib/test/t-path.c: Likewise.
	* lib/test/t-pkginfo.c: Likewise.
	* lib/test/t-string.c: Likewise.
	* lib/test/t-test.c: Likewise.
	* lib/test/t-varbuf.c: Likewise.
	* lib/test/t-version.c: Likewise.

2009-01-20  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-db.h (varbufaddbuf): Rename argument l to size.
	* lib/nfmalloc.c (nfstrnsave): Likewise.
	* lib/varbuf.c (varbufaddbuf): Likewise.

2009-01-20  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-db.h (varbufdupc): Use size_t instead of ssize_t.
	(varbufaddbuf): Use size_t instead of const int.
	(nfstrnsave): Use size_t instead of int.

2009-01-14  Guillem Jover  <guillem@debian.org>

	* man/start-stop-daemon.8: Document new option --procsched.
	* utils/start-stop-daemon.c [_POSIX_PRIORITY_SCHEDULING]: Include
	<sched.h>.
	[!_POSIX_PRIORITY_SCHEDULING]: Define SCHED_OTHER, SCHED_FIFO and
	SCHED_RR with dummy values.
	(struct res_schedule): New type.
	(proc_sched): New variable.
	(do_help): Document --procsched.
	(parse_proc_schedule, set_proc_schedule): New functions.
	(parse_options): Add 'procsched' to longopts. Add 'P:' to getopt_long
	call. Handle 'P' as getopt_long return value. Call parse_proc_schedule
	if proc_schedule_str is not NULL.
	(main): Print proc_sched values if --test is used. Call
	set_proc_schedule if proc_sched is not NULL.

2009-01-14  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (xstrdup): New function.
	(parse_options): Use xstrdup instead of strdup.

2009-01-10  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (main): If changeuser is a uid, call
	getpwuid to get the passwd entry and do the same setup as if it is
	a username.

2009-01-07  Guillem Jover  <guillem@debian.org>
