@@ -1,5 +1,12 @@
 2009-01-22  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg-db.h (varbufsubstc): New function prototype.
+	* lib/varbuf.c (varbufsubstc): New function definition.
+	* lib/test/t-varbuf.c (test_varbuf_substc): New function.
+	(test): Call test_varbuf_substc.
+
+2009-01-22  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac (AC_CONFIG_FILES): Add 'lib/test/Makefile'.
 	* lib/Makefile.am (SUBDIRS): New variable.
 	* lib/dpkg-test.h: New file.
